minor change to test

--- a/test/vimwiki-reader.html
+++ b/test/vimwiki-reader.html
@@ -91,13 +91,13 @@
 <p><a href="mailto:info@example.org">email me</a></p>
 <p><a href="mailto:hello@bye.com">mailto:hello@bye.com</a></p>
 <h2 id="internal links">internal links</h2>
-<p><a href="This is a link" class="uri">This is a link</a></p>
-<p><a href="This is a link source">Description of the link</a></p>
-<p><a href="projects/Important Project 1" class="uri">projects/Important Project 1</a> <a href="../index" class="uri">../index</a> <a href="a subdirectory/">Other files</a></p>
+<p><a href="This is a link.html">This is a link</a></p>
+<p><a href="This is a link source.html">Description of the link</a></p>
+<p><a href="projects/Important Project 1.html">projects/Important Project 1</a> <a href="../index.html">../index</a> <a href="a subdirectory/">Other files</a></p>
 <p><a href="#tag-one">try me to test tag anchors</a></p>
 <p><a href="#block quotes">try me to test header anchors</a></p>
 <p><a href="#strong">try me to test strong anchors</a></p>
-<p><a href="Todo List#Tomorrow">Tasks for tomorrow</a></p>
+<p><a href="Todo List.html#Tomorrow">Tasks for tomorrow</a></p>
 <p><a href="file:../assets/data.csv">Important Data</a></p>
 <h3 id="links with thumbnails">links with thumbnails</h3>
 <p><a href="http://www.google.com"><img src="./movie.jpg" alt="" /></a></p>
