minor updates to vimwiki reader.
- updated comments in Vimwiki.hs to reflect current status of
implementation
- added vimwiki to trypandoc

--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -94,6 +94,7 @@ $(document).ready(function() {
         <option value="rst">reStructuredText</option>
         <option value="textile">Textile</option>
         <option value="t2t">Txt2Tags</option>
+        <option value="vimwiki">Vimwiki</option>
       </select>
       <br/>
       <textarea id="text" maxlength="3000" rows="15"></textarea>
