--- a/test/lhs-test.html
+++ b/test/lhs-test.html
@@ -9,6 +9,7 @@
       code{white-space: pre-wrap;}
       .smallcaps{font-variant: small-caps;}
       .line-block{white-space: pre-line;}
+      .column{display: inline-block;}
   </style>
   <style type="text/css">
 div.sourceCode { overflow-x: auto; }
