--- a/test/s5-fancy.html
+++ b/test/s5-fancy.html
@@ -14,6 +14,7 @@
       code{white-space: pre-wrap;}
       .smallcaps{font-variant: small-caps;}
       .line-block{white-space: pre-line;}
+      .column{display: inline-block;}
   </style>
   <!-- configuration parameters -->
   <meta name="defaultView" content="slideshow" />
