Add ms to trypandoc output formats.

--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -126,6 +126,7 @@ $(document).ready(function() {
         <option value="json">JSON</option>
         <option value="latex">LaTeX</option>
         <option value="man">Groff man</option>
+        <option value="ms">Groff ms</option>
         <option value="markdown">Markdown (pandoc)</option>
         <option value="markdown_mmd">MultiMarkdown</option>
         <option value="markdown_phpextra">Markdown (PHP Markdown Extra)</option>
