trypandoc: add native.

--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -91,6 +91,7 @@ $(document).ready(function() {
         <option value="markdown_strict">Markdown (strict)</option>
         <option value="mediawiki">MediaWiki</option>
         <option value="muse">Muse</option>
+        <option value="native">Native (Pandoc AST)</option>
         <option value="opml">OPML</option>
         <option value="org">Org Mode</option>
         <option value="rst">reStructuredText</option>
@@ -133,6 +134,7 @@ $(document).ready(function() {
         <option value="markdown_strict">Markdown (strict)</option>
         <option value="mediawiki">MediaWiki</option>
         <option value="muse">Muse</option>
+        <option value="native">Native (Pandoc AST)</option>
         <option value="opendocument">OpenDocument</option>
         <option value="opml">OPML</option>
         <option value="org">Org Mode</option>
