HTML Writer: consistently use dashed class-names
see #3556

--- a/test/s5-basic.html
+++ b/test/s5-basic.html
@@ -38,7 +38,7 @@
 </div>
 </div>
 <div class="presentation">
-<div class="titleslide slide">
+<div class="title-slide slide">
   <h1 class="title">My S5 Document</h1>
   <h3 class="author">Sam Smith<br/>Jen Jones</h3>
   <h4 class="date">July 15, 2006</h4>
