--- a/test/s5-basic.html
+++ b/test/s5-basic.html
@@ -12,9 +12,9 @@
   <title>My S5 Document</title>
   <style type="text/css">
       code{white-space: pre-wrap;}
-      .smallcaps{font-variant: small-caps;}
-      .line-block{white-space: pre-line;}
-      .column{display: inline-block;}
+      span.smallcaps{font-variant: small-caps;}
+      div.line-block{white-space: pre-line;}
+      div.column{display: inline-block; vertical-align: top; width: 50%;}
   </style>
   <!-- configuration parameters -->
   <meta name="defaultView" content="slideshow" />
