--- a/test/lhs-test.html
+++ b/test/lhs-test.html
@@ -32,7 +32,7 @@ pre.numberSource div.sourceLine::before, .numberSource a.sourceLine::before
     padding: 0 4px; width: 4em; }
 pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa; color: #aaaaaa;  padding-left: 4px; }
 @media screen {
-a.sourceLine::before { text-decoration: underline; color = initial; }
+a.sourceLine::before { text-decoration: underline; color: initial; }
 }
 code span.kw { color: #007020; font-weight: bold; } /* Keyword */
 code span.dt { color: #902000; } /* DataType */
