Update tests for new skylighting.

--- a/test/lhs-test.html
+++ b/test/lhs-test.html
@@ -29,8 +29,10 @@ pre.numberSource a.sourceLine::before
     -webkit-touch-callout: none; -webkit-user-select: none;
     -khtml-user-select: none; -moz-user-select: none;
     -ms-user-select: none; user-select: none;
-    padding: 0 4px; width: 4em; }
-pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa; color: #aaaaaa;  padding-left: 4px; }
+    padding: 0 4px; width: 4em;
+    color: #aaaaaa;
+  }
+pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
 @media screen {
 a.sourceLine::before { text-decoration: underline; color: initial; }
 }
