Trypandoc: add man input format.

--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -64,7 +64,7 @@ $(document).ready(function() {
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <h1>Try <a href="http://pandoc.org">pandoc</a>!</h1>
+      <h1>Try pandoc!</h1>
     </div>
     <div class="col-md-6">
       <pre id="command"></pre>
@@ -85,6 +85,7 @@ $(document).ready(function() {
         <option value="haddock">Haddock markup</option>
         <option value="html">HTML</option>
         <option value="latex">LaTeX</option>
+        <option value="man" selected>Roff man</option>
         <option value="markdown" selected>Markdown (pandoc)</option>
         <option value="markdown_mmd">MultiMarkdown</option>
         <option value="markdown_phpextra">Markdown (PHP Markdown Extra)</option>
@@ -126,8 +127,8 @@ $(document).ready(function() {
         <option value="icml">ICML</option>
         <option value="json">JSON</option>
         <option value="latex">LaTeX</option>
-        <option value="man">Groff man</option>
-        <option value="ms">Groff ms</option>
+        <option value="man">Roff man</option>
+        <option value="ms">Roff ms</option>
         <option value="markdown">Markdown (pandoc)</option>
         <option value="markdown_mmd">MultiMarkdown</option>
         <option value="markdown_phpextra">Markdown (PHP Markdown Extra)</option>
