trypandoc: preselect output format.

--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -88,7 +88,7 @@ $(document).ready(function() {
         <option value="haddock">Haddock markup</option>
         <option value="html">HTML</option>
         <option value="latex">LaTeX</option>
-        <option value="man" selected>Roff man</option>
+        <option value="man">Roff man</option>
         <option value="markdown" selected>Markdown (pandoc)</option>
         <option value="markdown_mmd">MultiMarkdown</option>
         <option value="markdown_phpextra">Markdown (PHP Markdown Extra)</option>
@@ -125,8 +125,8 @@ $(document).ready(function() {
         <option value="dzslides">dzslides</option>
         <option value="gfm">GitHub-Flavored Markdown</option>
         <option value="haddock">Haddock markup</option>
-        <option value="html4" selected>HTML 4</option>
-        <option value="html5">HTML 5</option>
+        <option value="html4">HTML 4</option>
+        <option value="html5" selected>HTML 5</option>
         <option value="icml">ICML</option>
         <option value="json">JSON</option>
         <option value="latex">LaTeX</option>
