--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -45,8 +45,8 @@ $(document).ready(function() {
          });
     };
     $("#convert").click(newpage);
-    $("#from").change(newpage);
-    $("#to").change(newpage);
+    $("#from").select(newpage);
+    $("#to").select(newpage);
 });
   </script>
   <style type="text/css">
