Revert "Trypandoc: recompile on select rather than change."
This reverts commit f5ad280efb580fcf94fdcef108c9f7f905483ed0.

--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -45,8 +45,8 @@ $(document).ready(function() {
          });
     };
     $("#convert").click(newpage);
-    $("#from").select(newpage);
-    $("#to").select(newpage);
+    $("#from").change(newpage);
+    $("#to").change(newpage);
 });
   </script>
   <style type="text/css">
