trypandoc: tweaked drop-down lists.

--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -83,16 +83,16 @@ $(document).ready(function() {
         <option value="commonmark">CommonMark</option>
         <option value="creole">Creole</option>
         <option value="docbook">DocBook</option>
-        <option value="gfm">GitHub-Flavored Markdown</option>
         <option value="haddock">Haddock markup</option>
         <option value="html">HTML</option>
         <option value="latex">LaTeX</option>
-        <option value="man">Roff man</option>
+        <option value="man">Man</option>
         <option value="markdown" selected>Markdown (pandoc)</option>
-        <option value="markdown_mmd">MultiMarkdown</option>
+        <option value="gfm">Markdown (GitHub-flavored)</option>
         <option value="markdown_phpextra">Markdown (PHP Markdown Extra)</option>
         <option value="markdown_strict">Markdown (strict)</option>
         <option value="mediawiki">MediaWiki</option>
+        <option value="markdown_mmd">MultiMarkdown</option>
         <option value="muse">Muse</option>
         <option value="native">Native (Pandoc AST)</option>
         <option value="opml">OPML</option>
@@ -122,20 +122,20 @@ $(document).ready(function() {
         <option value="dokuwiki">DokuWiki</option>
         <option value="dzslides">DZSlides</option>
         <option value="dzslides">dzslides</option>
-        <option value="gfm">GitHub-Flavored Markdown</option>
         <option value="haddock">Haddock markup</option>
         <option value="html4">HTML 4</option>
         <option value="html5" selected>HTML 5</option>
         <option value="icml">ICML</option>
         <option value="json">JSON</option>
         <option value="latex">LaTeX</option>
-        <option value="man">Roff man</option>
-        <option value="ms">Roff ms</option>
+        <option value="man">Man</option>
+        <option value="ms">Ms</option>
         <option value="markdown">Markdown (pandoc)</option>
-        <option value="markdown_mmd">MultiMarkdown</option>
+        <option value="gfm">Markdown (GitHub-flavored)</option>
         <option value="markdown_phpextra">Markdown (PHP Markdown Extra)</option>
         <option value="markdown_strict">Markdown (strict)</option>
         <option value="mediawiki">MediaWiki</option>
+        <option value="markdown_mmd">MultiMarkdown</option>
         <option value="muse">Muse</option>
         <option value="native">Native (Pandoc AST)</option>
         <option value="opendocument">OpenDocument</option>
