Add JATS to output option on Try pandoc.

--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -132,6 +132,7 @@ $(document).ready(function() {
         <option value="html4">HTML 4</option>
         <option value="html5" selected>HTML 5</option>
         <option value="icml">ICML</option>
+        <option value="jats">JATS</option>
         <option value="json">JSON</option>
         <option value="latex">LaTeX</option>
         <option value="man">Man</option>
