trypandoc: added some missing formats to drop-down list.

--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -89,8 +89,12 @@ $(document).ready(function() {
         <option value="commonmark">CommonMark</option>
         <option value="creole">Creole</option>
         <option value="docbook">DocBook</option>
+        <option value="dokuwiki">DokuWiki</option>
+        <option value="fb2">FB2</option>
         <option value="haddock">Haddock markup</option>
         <option value="html">HTML</option>
+        <option value="jats">JATS</option>
+        <option value="ipynb">Jupyter Notebook (ipynb)</option>
         <option value="latex">LaTeX</option>
         <option value="man">Man</option>
         <option value="markdown" selected>Markdown (pandoc)</option>
@@ -119,7 +123,8 @@ $(document).ready(function() {
       </label>
       <select id="to">
         <option value="S5">S5</option>
-        <option value="asciidoc">AsciiDoc</option>
+        <option value="asciidoc">AsciiDoc (original)</option>
+        <option value="asciidoctor">AsciiDoc (asciidoctor-flavored)</option>
         <option value="beamer">LaTeX Beamer</option>
         <option value="commonmark">CommonMark</option>
         <option value="context">ConTeXt</option>
@@ -127,13 +132,13 @@ $(document).ready(function() {
         <option value="docbook5">DocBook v5</option>
         <option value="dokuwiki">DokuWiki</option>
         <option value="dzslides">DZSlides</option>
-        <option value="dzslides">dzslides</option>
         <option value="haddock">Haddock markup</option>
         <option value="html4">HTML 4</option>
         <option value="html5" selected>HTML 5</option>
         <option value="icml">ICML</option>
         <option value="jats">JATS</option>
         <option value="json">JSON</option>
+        <option value="ipynb">Jupyter Notebook (ipynb)</option>
         <option value="latex">LaTeX</option>
         <option value="man">Man</option>
         <option value="ms">Ms</option>
@@ -154,6 +159,7 @@ $(document).ready(function() {
         <option value="rtf">RTF</option>
         <option value="slideous">Slideous</option>
         <option value="slidy">Slidy</option>
+        <option value="tei">TEI</option>
         <option value="texinfo">Texinfo</option>
         <option value="textile">Textile</option>
         <option value="zimwiki">ZimWiki</option>
