Add Jira in trypandoc

--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -137,6 +137,7 @@ $(document).ready(function() {
         <option value="html5" selected>HTML 5</option>
         <option value="icml">ICML</option>
         <option value="jats">JATS</option>
+        <option value="jira">Jira</option>
         <option value="json">JSON</option>
         <option value="ipynb">Jupyter Notebook (ipynb)</option>
         <option value="latex">LaTeX</option>
